Replace more DatePanel with LocalDatePanel + Code Cleanup